--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node -r ts-node/register src/index.ts",
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "pack": "npm pack --pack-destination ~/npm-packages/"
   },
   "engines": {
     "node": "18.16.1",
